--- a/styles.css
+++ b/styles.css
@@ -95,18 +95,37 @@ body {
     padding: 2em;
 }
 
-.dispositivos {
+.rodape {
     text-align: center;
+    margin: 5em 3em;
 }
 
-.dispositivos__titulo {
-    font-size: 48px;
-    color: var(--branco-principal);
-}
-
-.dispositivos__lista {
-    display:flex;
+.rodape__lista {
+    display: flex;
     justify-content: center;
     list-style-type: none;
-    margin: 5em 0;
+    margin-top: 10em;
 }
+
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 10em;
+    
+}
+
+.rodape__texto{
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
+
